<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rgbmill.com.taringanotificaciones.login_act">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:background="@drawable/outline"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="false"
        android:clipToPadding="false">


        <LinearLayout

            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="96dp"
                android:layout_gravity="center"
                android:layout_height="96dp"
                android:scaleX="1.4"
                android:scaleY="1.4"
                app:srcCompat="@drawable/load_ballon"
                android:id="@+id/rotate"
                android:cropToPadding="true" />

            <TextView
                android:text="@string/prompt_user"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorDark"
                android:layout_marginBottom="8dp"
                android:id="@+id/textView2" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:textColor="@color/colorDark"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hint="@string/prompt_user"
                android:background="@drawable/textinput"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

            <TextView
                android:text="@string/prompt_pass"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorDark"
                android:id="@+id/userLogin"
                android:layout_weight="0.21" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hint="@string/prompt_pass"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/prompt_user"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/textinput"
                android:layout_marginTop="8dp"
                android:layout_weight="0.50" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorWhite"
                android:background="@drawable/buttonmain"
                android:textStyle="bold"
                android:onClick="doLogin" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
